--- a/app/src/main/res/layout/activity_add_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_restaurant.xml
@@ -42,6 +42,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Количество столов"
+        android:layout_marginBottom="8dp"/>
+
+    <EditText
+        android:id="@+id/tableCountEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:text="10"
+        android:layout_marginBottom="24dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Описание (необязательно)"
         android:layout_marginBottom="8dp"/>
 
@@ -49,10 +63,22 @@
         android:id="@+id/descriptionEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Веб-сайт (необязательно)"
+        android:layout_marginBottom="8dp"/>
+
+    <EditText
+        android:id="@+id/websiteEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"/>
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Добавить ресторан"/>
